update file & add file

--- a/index.html
+++ b/index.html
@@ -173,9 +173,133 @@
               </a>
                 </div>
             </div>
+            <div class="col-md-4 text-center">
+                <div class="p-box">
+                    <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
+                        <div class="p-box w-100">
+                            <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
+                        </div>
+                        <div class="p-content">
+                            <h2 class="p-title">Loreda Cuno Nere</h2>
+                            <div class="p-more">
+                                <span class="p-ctegory">Web Design</span> /
+                                <span class="p-date">18 Sep. 2018</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 text-center">
+                <div class="p-box">
+                    <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
+                        <div class="p-box w-100">
+                            <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
+                        </div>
+                        <div class="p-content">
+                            <h2 class="p-title">Loreda Cuno Nere</h2>
+                            <div class="p-more">
+                                <span class="p-ctegory">Web Design</span> /
+                                <span class="p-date">18 Sep. 2018</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
         </section>
         <!-- End Portofolio -->
+
+        <!-- Messages -->
+        <section class="section-messages-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 mb-4">
+                        <h3>Send Message Us</h3>
+                        <form>
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            </div>
+                            <div class="mb-3">
+                                <label for="subject" class="form-label">Subject</label>
+                                <input type="subject" class="form-control" id="subject">
+                            </div>
+                            <div class="mb-3">
+                                <label for="message" class="form-label">Message</label>
+                                <textarea type="message" class="form-control" id="message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="row">
+                            <div class="title">
+                                <h3>Social Media</h3>
+                            </div>
+                            <div class="col-3 mt-3">
+                                <a href="#" class="s-yt">
+                                    <div class="figure">
+                                        <img src="/images/social/youtube.png" class="figure-img img-fluid" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-3 mt-3">
+                                <a href="#" class="s-ig">
+                                    <div class="figure">
+                                        <img src="/images/social/instagram.png" class="figure-img img-fluid" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-3 mt-3">
+                                <a href="#" class="s-linked">
+                                    <div class="figure">
+                                        <img src="/images/social/linkedin.png" class="figure-img img-fluid" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-3 mt-3">
+                                <a href="#" class="s-git">
+                                    <div class="figure">
+                                        <img src="/images/social/github.png" class="figure-img img-fluid" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-3 mt-3">
+                                <a href="#" class="s-drib">
+                                    <div class="figure">
+                                        <img src="/images/social/dribbble.png" class="figure-img img-fluid" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-3 mt-3">
+                                <a href="#" class="s-beh">
+                                    <div class="figure">
+                                        <img src="/images/social/behance.png" class="figure-img img-fluid" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Messages -->
+
+        <!-- Footer -->
+        <footer class="section-footer mb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        All right reserved by <a href="#">wikukarno.id</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- End Footer -->
 
         <!-- Script -->
         <script src="/libraries/jquery/jquery-3.6.0.js"></script>
