update file & add file details

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="col-lg-12 mt-3">
             <h5>Hi, Everyone</h5>
             <h1>I am Wiku Karno</h1>
-            <p>Ui Designer &nbsp; | &nbsp; Developer</p>
+            <p>Junior <span class="typed text-primary" data-typed-items="Ui Designer, Developer, Content Writter"></span></p>
           </div>
           <div class="col mt-3">
             <a
@@ -104,7 +104,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <figure class="figure pt-5">
+            <figure class="figure pt-5" data-aos="zoom-in" data-aos-delay="100">
               <img
                 src="/images/ic_graduation.png"
                 class="figure-img img-fluid rounded"
@@ -115,7 +115,7 @@
             </figure>
           </div>
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <figure class="figure pt-5">
+            <figure class="figure pt-5" data-aos="zoom-in" data-aos-delay="200">
               <img
                 src="/images/ic_graduation.png"
                 class="figure-img img-fluid rounded"
@@ -126,7 +126,7 @@
             </figure>
           </div>
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <figure class="figure pt-5">
+            <figure class="figure pt-5" data-aos="zoom-in" data-aos-delay="300">
               <img
                 src="/images/ic_graduation.png"
                 class="figure-img img-fluid rounded"
@@ -137,7 +137,7 @@
             </figure>
           </div>
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <figure class="figure pt-5">
+            <figure class="figure pt-5" data-aos="zoom-in" data-aos-delay="400">
               <img
                 src="/images/ic_graduation.png"
                 class="figure-img img-fluid rounded"
@@ -158,77 +158,53 @@
         <div class="row">
           <div class="col-12 col-lg-12 text-center">
             <h3>Services</h3>
-            <p class="a-information">Information about personal data</p>
+            <p class="a-information">Get the best services</p>
           </div>
           <div class="line-mf"></div>
         </div>
         <div class="row mt-5">
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <div class="s-box">
+            <div class="card" data-aos="zoom-in" data-aos-delay="100">
               <figure class="figure">
-                <img
-                  src="/images/services/code.png"
-                  class="figure-img img-fluid rounded"
-                  alt="..."
-                />
+                <img src="/images/services/code.png" class="img-fluid" alt="...">
+              </figure>
+              <div class="card-body">
                 <h5 class="figure-caption">Developer</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-                  adipisci eaque autem fugiat! Quia, provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </figure>
+                <p class="card-text"><q>I always try to provide application projects that are easy to use and clean code</q></p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <div class="s-box">
+            <div class="card" data-aos="zoom-in" data-aos-delay="200">
               <figure class="figure">
-                <img
-                  src="/images/services/designer.png"
-                  class="figure-img img-fluid rounded"
-                  alt="..."
-                />
+                <img src="/images/services/designer.png" class="img-fluid" alt="...">
+              </figure>
+              <div class="card-body">
                 <h5 class="figure-caption">Web Designer</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-                  adipisci eaque autem fugiat! Quia, provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </figure>
+                <p class="card-text"><q>I always try to give my best work and creative ideas in making design</q></p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <div class="s-box">
+            <div class="card" data-aos="zoom-in" data-aos-delay="300">
               <figure class="figure">
-                <img
-                  src="/images/services/inovation.png"
-                  class="figure-img img-fluid rounded"
-                  alt="..."
-                />
+                <img src="/images/services/inovation.png" class="img-fluid" alt="...">
+              </figure>
+              <div class="card-body">
                 <h5 class="figure-caption">Inovation</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-                  adipisci eaque autem fugiat! Quia, provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </figure>
+                <p class="card-text"><q>I am ready to start from scratch, as well as continue an ongoing project</q></p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 text-center">
-            <div class="s-box">
+            <div class="card" data-aos="zoom-in" data-aos-delay="400">
               <figure class="figure">
-                <img
-                  src="/images/services/content_writer.png"
-                  class="figure-img img-fluid rounded"
-                  alt="..."
-                />
-                <h5 class="figure-caption">Content Writer</h5>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-                  adipisci eaque autem fugiat! Quia, provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
+                <img src="/images/services/content_writer.png" class="img-fluid" alt="...">
               </figure>
+              <div class="card-body">
+                <h5 class="figure-caption">Content Writter</h5>
+                <p class="card-text"><q>I am ready to publish useful content and provide innovative ideas</q></p>
+              </div>
             </div>
           </div>
         </div>
@@ -242,15 +218,15 @@
         <div class="row">
           <div class="col-12 col-lg-12 text-center">
             <h3>Portofolio</h3>
-            <p class="a-information">Information about personal data</p>
+            <p class="a-information">Browse my best work for your project</p>
           </div>
           <div class="line-mf"></div>
         </div>
         <div class="row p-content-img">
           <div class="col-md-4 text-center">
-            <div class="p-box">
+            <div class="p-box" data-aos="zoom-in" data-aos-delay="100">
               <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
-                <div class="p-box w-100">
+                <div class="p-box">
                   <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
                 </div>
               </a>
@@ -266,9 +242,9 @@
                 </div>
             </div>
             <div class="col-md-4 text-center">
-                <div class="p-box">
+                <div class="p-box" data-aos="zoom-in" data-aos-delay="200">
                     <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
-                        <div class="p-box w-100">
+                        <div class="p-box">
                             <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
                         </div>
                     </a>
@@ -284,9 +260,9 @@
                 </div>
             </div>
             <div class="col-md-4 text-center">
-                <div class="p-box">
+                <div class="p-box" data-aos="zoom-in" data-aos-delay="300">
                     <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
-                        <div class="p-box w-100">
+                        <div class="p-box">
                             <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
                         </div>
                     </a>
@@ -333,53 +309,62 @@
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
                     </div>
-                    <div class="col-12 col-lg-6">
+                    <div class="col-12 col-lg-6 social-media-content">
                         <div class="row">
                             <div class="title">
                                 <h3>Social Media</h3>
                                 <div class="line-mf"></div>
                             </div>
-                            <div class="col-4 col-lg-2 mt-3">
-                                <a href="#" class="s-yt">
-                                    <div class="figure">
-                                        <img src="/images/social/youtube.png" class="figure-img img-fluid" alt="">
-                                    </div>
-                                </a>
+                            <div class="row">
+                                <div class="col-12 col-lg-12 s-information">
+                                    <p>
+                                        If you are interested and interested in my work, please send a message to cooperate. You can also browse my social media below to see the best work and content from me.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="col-4 col-lg-2 mt-3">
-                                <a href="#" class="s-ig">
-                                    <div class="figure">
-                                        <img src="/images/social/instagram.png" class="figure-img img-fluid" alt="">
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4 col-lg-2 mt-3">
-                                <a href="#" class="s-linked">
-                                    <div class="figure">
-                                        <img src="/images/social/linkedin.png" class="figure-img img-fluid" alt="">
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4 col-lg-2 mt-3">
-                                <a href="#" class="s-git">
-                                    <div class="figure">
-                                        <img src="/images/social/github.png" class="figure-img img-fluid" alt="">
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4 col-lg-2 mt-3">
-                                <a href="#" class="s-drib">
-                                    <div class="figure">
-                                        <img src="/images/social/dribbble.png" class="figure-img img-fluid" alt="">
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-4 col-lg-2 mt-3">
-                                <a href="#" class="s-beh">
-                                    <div class="figure">
-                                        <img src="/images/social/behance.png" class="figure-img img-fluid" alt="">
-                                    </div>
-                                </a>
+                            <div class="row">
+                                <div class="col-4 col-lg-2 mt-3">
+                                    <a href="#" class="s-yt">
+                                        <div class="figure" data-aos="zoom-in" data-aos-delay="100">
+                                            <img src="/images/social/youtube.png" class="figure-img img-fluid" alt="">
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-4 col-lg-2 mt-3">
+                                    <a href="#" class="s-ig">
+                                        <div class="figure" data-aos="zoom-in" data-aos-delay="200">
+                                            <img src="/images/social/instagram.png" class="figure-img img-fluid" alt="">
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-4 col-lg-2 mt-3">
+                                    <a href="#" class="s-linked">
+                                        <div class="figure" data-aos="zoom-in" data-aos-delay="300">
+                                            <img src="/images/social/linkedin.png" class="figure-img img-fluid" alt="">
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-4 col-lg-2 mt-3">
+                                    <a href="#" class="s-git">
+                                        <div class="figure" data-aos="zoom-in" data-aos-delay="400">
+                                            <img src="/images/social/github.png" class="figure-img img-fluid" alt="">
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-4 col-lg-2 mt-3">
+                                    <a href="#" class="s-drib">
+                                        <div class="figure" data-aos="zoom-in" data-aos-delay="500">
+                                            <img src="/images/social/dribbble.png" class="figure-img img-fluid" alt="">
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="col-4 col-lg-2 mt-3">
+                                    <a href="#" class="s-beh">
+                                        <div class="figure" data-aos="zoom-in" data-aos-delay="600">
+                                            <img src="/images/social/behance.png" class="figure-img img-fluid" alt="">
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -412,6 +397,7 @@
         <script src="/libraries/bootstrap/js/bootstrap.js"></script>
         <script src="libraries/lightbox/js/lightbox-plus-jquery.js"></script>
         <script src="/libraries/aos/aos.js"></script>
+        <script src="/libraries/typed/typed.min.js"></script>
         <script src="/script/main.js"></script>
         <script>
             AOS.init();
