--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid container">
             <a class="navbar-brand" href="#">
                 <img src="/images/Logo/logo.png" class="img-fluid" alt="" />
