--- a/detail.html
+++ b/detail.html
@@ -57,7 +57,7 @@
     </section>
 
     <!-- Main Content -->
-    <section class="section-maintence-content">
+    <section class="section-maintence-content mt-5">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-lg-6 text-center" data-aos="zoom-in" data-aos-delay="100">
