--- a/index.html
+++ b/index.html
@@ -224,7 +224,28 @@
         </div>
         <div class="row p-content-img">
           <div class="col-md-4 text-center">
-            <div class="p-box" data-aos="zoom-in" data-aos-delay="100">
+            <div class="portofolio-content-img text-center">
+              <figure class="figure">
+                    <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
+                      <div class="p-box">
+                        <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid" data-lightbox="gallery-mf">
+                      </div>
+                    </a>
+                    </a>
+                    </figure>
+                    <a href="detail.html">
+                        <div class="p-content">
+                            <h2 class="p-title">Loreda Cuno Nere</h2>
+                            <div class="p-more">
+                                <span class="p-ctegory">Web Design</span> /
+                                <span class="p-date">18 Sep. 2018</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <!-- <div class="p-box" data-aos="zoom-in" data-aos-delay="100">
               <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
                 <div class="p-box">
                   <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
@@ -239,134 +260,90 @@
                             </div>
                         </div>
                     </a>
-                </div>
+            </div> -->
             </div>
-            <div class="col-md-4 text-center">
-                <div class="p-box" data-aos="zoom-in" data-aos-delay="200">
-                    <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
-                        <div class="p-box">
-                            <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
-                        </div>
-                    </a>
-                    <a href="detail.html">
-                        <div class="p-content">
-                            <h2 class="p-title">Loreda Cuno Nere</h2>
-                            <div class="p-more">
-                                <span class="p-ctegory">Web Design</span> /
-                                <span class="p-date">18 Sep. 2018</span>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="p-box" data-aos="zoom-in" data-aos-delay="300">
-                    <a href="/images/portofolio/work-1.jpg" data-lightbox="gallery-mf">
-                        <div class="p-box">
-                            <img src="/images/portofolio/work-1.jpg" alt="" class="figure-img img-fluid">
-                        </div>
-                    </a>
-                    <a href="detail.html">
-                        <div class="p-content">
-                            <h2 class="p-title">Loreda Cuno Nere</h2>
-                            <div class="p-more">
-                                <span class="p-ctegory">Web Design</span> /
-                                <span class="p-date">18 Sep. 2018</span>
-                            </div>
-                        </div>
-                    </a>
 
-                </div>
-            </div>
         </div>
         </section>
         <!-- End Portofolio -->
 
         <!-- Messages -->
-        <section class="section-messages-content" id="contact">
+        <section class="section-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-6 mb-4">
-                        <h3>Send Message Us</h3>
-                        <div class="line-mf"></div>
-                        <form>
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="name">
+                    <div class="col-12 col-lg-3 mt-5">
+                        <figure class="figure">
+                            <a href="#" class="l-footer">
+                                <img src="/images/logo/logo.png" class="figure-img img-fluid" alt="">
+                            </a>
+                            <h5 class="title text-uppercase">WikuKarno.id</h5>
+                            <div class="address">
+                                Tanah Tinggi <br> Kecamatan Tapung Hilir <br> Kabupaten Kampar, Riau.
                             </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <div class="contact-us mt-3">
+                                +62 878 - 3124 - 7352 <br> me@wikukarno.id
                             </div>
-                            <div class="mb-3">
-                                <label for="subject" class="form-label">Subject</label>
-                                <input type="subject" class="form-control" id="subject">
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label">Message</label>
-                                <textarea type="message" class="form-control" id="message"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
+                        </figure>
                     </div>
-                    <div class="col-12 col-lg-6 social-media-content">
-                        <div class="row">
-                            <div class="title">
-                                <h3>Social Media</h3>
-                                <div class="line-mf"></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 col-lg-12 s-information">
-                                    <p>
-                                        If you are interested and interested in my work, please send a message to cooperate. You can also browse my social media below to see the best work and content from me.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-4 col-lg-2 mt-3">
-                                    <a href="#" class="s-yt">
-                                        <div class="figure" data-aos="zoom-in" data-aos-delay="100">
-                                            <img src="/images/social/youtube.png" class="figure-img img-fluid" alt="">
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-4 col-lg-2 mt-3">
-                                    <a href="#" class="s-ig">
-                                        <div class="figure" data-aos="zoom-in" data-aos-delay="200">
-                                            <img src="/images/social/instagram.png" class="figure-img img-fluid" alt="">
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-4 col-lg-2 mt-3">
-                                    <a href="#" class="s-linked">
-                                        <div class="figure" data-aos="zoom-in" data-aos-delay="300">
-                                            <img src="/images/social/linkedin.png" class="figure-img img-fluid" alt="">
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-4 col-lg-2 mt-3">
-                                    <a href="#" class="s-git">
-                                        <div class="figure" data-aos="zoom-in" data-aos-delay="400">
-                                            <img src="/images/social/github.png" class="figure-img img-fluid" alt="">
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-4 col-lg-2 mt-3">
-                                    <a href="#" class="s-drib">
-                                        <div class="figure" data-aos="zoom-in" data-aos-delay="500">
-                                            <img src="/images/social/dribbble.png" class="figure-img img-fluid" alt="">
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-4 col-lg-2 mt-3">
-                                    <a href="#" class="s-beh">
-                                        <div class="figure" data-aos="zoom-in" data-aos-delay="600">
-                                            <img src="/images/social/behance.png" class="figure-img img-fluid" alt="">
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-12 col-lg-3 mt-5 mb-3">
+                        <h5>About Me</h5>
+                        <ul>
+                            <li class="mb-1">
+                                <a href="#">Profile</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Education</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Skill</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Portofolio</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-3 mt-5 mb-3">
+                        <h5>Useful Link</h5>
+                        <ul>
+                            <li class="mb-1">
+                                <a href="#">Blog</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Contact Us</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Privacy Policy</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Term of Services</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-3 mt-5 mb-3">
+                        <h5>Social Media</h5>
+                        <ul>
+                            <li class="mb-1">
+                                <a href="#">Youtube</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Instagram</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Linkedin</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Github</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Dribbble</a>
+                            </li>
+                            <li class="mb-1">
+                                <a href="#">Behance</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12 text-center copyright my-auto">
+                        <p> All right reserved by <a href="#">wikukarno.id</a></p>
                     </div>
                 </div>
             </div>
@@ -378,19 +355,6 @@
             <i class="fas fa-chevron-up "></i>
         </a>
         <!-- back to top -->
-
-        <!-- Footer -->
-        <footer class="section-footer">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,64L48,80C96,96,192,128,288,122.7C384,117,480,75,576,90.7C672,107,768,181,864,186.7C960,192,1056,128,1152,90.7C1248,53,1344,43,1392,37.3L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <p> All right reserved by <a href="#">wikukarno.id</a></p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- End Footer -->
 
         <!-- Script -->
         <script src="/libraries/jquery/jquery-3.6.0.js"></script>
