update file home

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </section>
         <!-- End Portofolio -->
 
-        <!-- Messages -->
+        <!-- Footer -->
         <section class="section-footer">
             <div class="container">
                 <div class="row">
@@ -348,7 +348,7 @@
                 </div>
             </div>
         </section>
-        <!-- End Messages -->
+        <!-- End Footer -->
 
         <!-- back to top -->
         <a href="# " class="to-top ">
